Compatibility fix between 883 and 771, avatars show up and comments do not scroll or overflow

--- a/src/components/Story/Body.less
+++ b/src/components/Story/Body.less
@@ -107,6 +107,7 @@
 
     code {
       font-size: 16px;
+      white-space:normal;
     }
   }
 
